added nav section in header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <body>
     <header>
         <h1>Meditate</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="tutorials.html">Body and Mind</a>
+            <a href="check-in.html">Check-in</a>
+        </nav>
     </header>
-    
+
 </body>
 </html>
