--- a/index.html
+++ b/index.html
@@ -16,5 +16,11 @@
         </nav>
     </header>
 
+    <footer>
+        <a href="#" target="_blank"></a>
+        <a href="#" target="_blank"></a>
+        <a href="#" target="_blank"></a>
+    </footer>
+
 </body>
 </html>
