added social media and paragraph to footer of each page

--- a/check-in.html
+++ b/check-in.html
@@ -17,9 +17,12 @@
     </header>
 
     <footer>
-        <a href="#" target="_blank"></a>
-        <a href="#" target="_blank"></a>
-        <a href="#" target="_blank"></a>
+        <p>
+            Find us on
+        </p>
+        <a href="#" target="_blank">Facebook</a>
+        <a href="#" target="_blank">Instagram</a>
+        <a href="#" target="_blank">Youtube</a>
     </footer>
 
 </body>
