added three sections to index.html to explain mission, background and benefits

--- a/index.html
+++ b/index.html
@@ -15,6 +15,33 @@
             <a href="check-in.html">Check-in</a>
         </nav>
     </header>
+    <section>
+        <h2>
+            Mission
+        </h2>
+        <p>
+            Mindfulness can be as simple as focusing on the breath or paying attention to the food you are eating. Our goal is to teach easy ways of incorporating mindfulness and meditation into your everyday life.
+        </p>
+    </section>
+    <section>
+        <h2>
+            Background
+        </h2>
+        <p>Meditation is the repeated process of focusing the mind and redirecting your thoughts. It can be used to increase your awareness of yourself and your surroundings. This is also a way to decrease stress , improve mood and improve concentration. </p>
+    </section>
+    <section>
+        <h2>
+            Benefits
+        </h2>
+        <ul>
+            <li>Reduces stress</li>
+            <li>Controls anxiety</li>
+            <li>Enhances self-awareness</li>
+            <li>Improves concentration</li>
+            <li>Improves sleep</li>
+            <li>Can decrease blood pressure</li>
+        </ul>
+    </section>
 
     <footer>
         <p>
