added three images to index.html to be displayed on homepage

--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
         <p>
             Mindfulness can be as simple as focusing on the breath or paying attention to the food you are eating. Our goal is to teach easy ways of incorporating mindfulness and meditation into your everyday life.
         </p>
+        <img src="assets/images/meditation-quote-4.png" alt="meditation quote">
     </section>
     <section>
         <h2>
             Background
         </h2>
         <p>Meditation is the repeated process of focusing the mind and redirecting your thoughts. It can be used to increase your awareness of yourself and your surroundings. This is also a way to decrease stress , improve mood and improve concentration. </p>
+        <img src="assets/images/meditation-quote-2.png" alt="meditation quote">
     </section>
     <section>
         <h2>
@@ -41,6 +43,7 @@
             <li>Improves sleep</li>
             <li>Can decrease blood pressure</li>
         </ul>
+    <img src="assets/images/meditation-quote-3.png" alt="meditation quote">    
     </section>
 
     <footer>
