added basic structure of a form to visualise layout on page

--- a/check-in.html
+++ b/check-in.html
@@ -16,6 +16,40 @@
         </nav>
     </header>
 
+    <div>
+    <h2>
+        This is a daily check-in for you to use as an online diary
+    </h2>
+
+    <form action="GET">
+        <label for="">First Name:</label>
+        <input type="text" required>
+
+        <label for="">Last Name:</label>
+        <input type="text" required>
+
+        <label for="">Rate Your Day:</label>
+        <label for="1">1 - Bad</label>
+
+        <input type="radio" required>
+        <label for="2">2 - Average</label>
+
+        <input type="radio">
+        <label for="3">3 - Good</label>
+
+        <input type="radio">
+        <label for="4">4 - Great</label>
+
+        <input type="radio">
+        <label for="5">5 - Excellent</label>
+
+        <label for="">What did you to feel good?</label>
+        <input type="text" required>
+
+        <input type="submit" value="Add to diary">
+    </form>
+    </div>
+
     <footer>
         <p>
             Find us on
