--- a/tutorials.html
+++ b/tutorials.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Meditate</h1>
+        <a href="index.html"><h1>Meditate</h1></a>
         <nav>
             <a href="index.html">Home</a>
             <a href="tutorials.html">Body and Mind</a>
