--- a/check-in.html
+++ b/check-in.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Meditate, meditation website, mindfulness website">
+    <meta name="keywords" content="meditation, mindfulness, tutorials, website">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Meditation and Mindfulness</title>
 </head>
 <body>
