--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Meditate, meditation website, mindfulness website">
+    <meta name="keywords" content="meditation, mindfulness, tutorials, website">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Meditation and Mindfulness</title>
 </head>
 <body>
     <header>
-        <a href="index.html"><h1>Meditate</h1></a>
-        <nav>
+        <a href="index.html"><h1 id="logo">Meditate</h1></a>
+        <nav id="navigation">
             <a href="index.html">Home</a>
             <a href="tutorials.html">Body and Mind</a>
             <a href="check-in.html">Check-in</a>
