--- a/tutorials.html
+++ b/tutorials.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Meditate, meditation website, mindfulness website">
+    <meta name="keywords" content="meditation, mindfulness, tutorials, website">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Meditation and Mindfulness</title>
 </head>
 <body>
@@ -19,7 +22,7 @@
     <section>
         <h2>Body</h2>
         <p></p>
-        <video src="https://www.youtube.com/watch?v=-yZrJh5YrdE" title="A guided video on how to position yourself for meditation" autoplay muted loop></video>
+        <video src="https://www.youtube.com/watch?v=-yZrJh5YrdE" title="A guided video on how to position yourself for meditation" controls autoplay muted loop><p>Your browser doesn't support HTML5 video.</p><a href="https://www.youtube.com/watch?v=-yZrJh5YrdE"><p>Link to the video</p></a></video>
         <p>Upward-Facing Dog/Urdhva Mukha Svanasana
             From Low Plank/Chaturanga, drop your hips down to the floor and flip your toes over so the tops of your feet touch the floor.
             Tighten your core and straighten your arms to push your chest up. Pull your shoulders back, squeeze your shoulder blades, and tilt your head toward the ceiling, to open up your chest.
@@ -37,7 +40,8 @@
         <p>Begin with just 5 minutes a day, and increase your time as the exercise becomes easier and more comfortable.
             If 5 minutes feels too long, start with just 2 minutes.
             Practice multiple times a day. Schedule set times or practice conscious breathing as you feel the need.</p>
-        <video src="https://www.youtube.com/watch?v=SEfs5TJZ6Nk" title="A 3-minute guided video on breathing techniques" autoplay muted loop></video>
+        <video src="https://www.youtube.com/watch?v=SEfs5TJZ6Nk" title="A 3-minute guided video on breathing techniques" controls autoplay muted loop><p>Your browser doesn't support HTML5 video</p><a href="https://www.youtube.com/watch?v=SEfs5TJZ6Nk"><p>Link to the video</p></a></video>
+
         <p>Diaphragmatic breathing
             Belly breathing can help you use your diaphragm properly. Do belly breathing exercises when you’re feeling relaxed and rested.
             
