--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <p>Meditation is the repeated process of focusing the mind and redirecting your thoughts. It can be used to increase your awareness of yourself and your surroundings. This is also a way to decrease stress , improve mood and improve concentration. </p>
         <img src="assets/images/meditation-quote-2.png" alt="meditation quote">
     </section>
+    
     <section>
         <h2>
             Benefits
@@ -46,16 +47,17 @@
             <li>Improves sleep</li>
             <li>Can decrease blood pressure</li>
         </ul>
-    <img src="assets/images/meditation-quote-3.png" alt="meditation quote">    
+        <img src="assets/images/meditation-quote-3.png" alt="meditation quote">   
     </section>
+     
 
-    <footer>
+    <footer class="navigation">
         <p>
             Find us on
         </p>
-        <a href="#" target="_blank">Facebook</a>
-        <a href="#" target="_blank">Instagram</a>
-        <a href="#" target="_blank">Youtube</a>
+        <a href="https://facebook.com" target="_blank">Facebook</a>
+        <a href="https://instagram.com" target="_blank">Instagram</a>
+        <a href="https://youtube.com" target="_blank">Youtube</a>
     </footer>
 
 </body>
