--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <a href="index.html"><h1 id="logo">Meditate</h1></a>
-        <nav id="navigation">
+        <nav class="navigation-menu">
             <a href="index.html">Home</a>
             <a href="tutorials.html">Body and Mind</a>
             <a href="check-in.html">Check-in</a>
