--- a/tutorials.html
+++ b/tutorials.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><h1>Meditate</h1></a>
-        <nav>
+        <a href="index.html"><h1 id="logo">Meditate</h1></a>
+        <nav class="navigation-menu">
             <a href="index.html">Home</a>
             <a href="tutorials.html">Body and Mind</a>
             <a href="check-in.html">Check-in</a>
