styled social media links as icons, changed colour and position to bottom right

--- a/check-in.html
+++ b/check-in.html
@@ -58,14 +58,26 @@
     </form>
     </div>
 
-    <footer>
+    <footer id="social-media">
         <p>
-            Find us on
+            Find us on:
         </p>
-        <a href="#" target="_blank">Facebook</a>
-        <a href="#" target="_blank">Instagram</a>
-        <a href="#" target="_blank">Youtube</a>
+        <ul>
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook-square"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+            </li>    
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fab fa-youtube"></i></a>
+            </li>    
+        </ul>    
     </footer>
+
+    <!-- font awesome script kit-->
+    <script src="https://kit.fontawesome.com/64eda5d7b8.js" crossorigin="anonymous"></script>
+
 
 </body>
 </html>
