--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Meditation and Mindfulness</title>
 </head>
 <body>
+    <div id=#background-image>
     <header>
         <a href="index.html"><h1 id="logo">Meditate</h1></a>
         <nav class="navigation-menu">
@@ -18,28 +19,27 @@
             <a href="check-in.html">Check-in</a>
         </nav>
     </header>
-    <section>
+    <section class="home-page">
         <h2>
             Mission
         </h2>
-        <p>
+        <p class="text-right">
             Mindfulness can be as simple as focusing on the breath or paying attention to the food you are eating. Our goal is to teach easy ways of incorporating mindfulness and meditation into your everyday life.
         </p>
-        <img src="assets/images/meditation-quote-4.png" alt="meditation quote">
     </section>
-    <section>
+
+    <section class="home-page">
         <h2>
             Background
         </h2>
         <p>Meditation is the repeated process of focusing the mind and redirecting your thoughts. It can be used to increase your awareness of yourself and your surroundings. This is also a way to decrease stress , improve mood and improve concentration. </p>
-        <img src="assets/images/meditation-quote-2.png" alt="meditation quote">
     </section>
     
-    <section>
+    <section class="home-page"></section>
         <h2>
             Benefits
         </h2>
-        <ul>
+        <ul class="text-right">
             <li>Reduces stress</li>
             <li>Controls anxiety</li>
             <li>Enhances self-awareness</li>
@@ -47,7 +47,6 @@
             <li>Improves sleep</li>
             <li>Can decrease blood pressure</li>
         </ul>
-        <img src="assets/images/meditation-quote-3.png" alt="meditation quote">   
     </section>
      
 
@@ -70,6 +69,6 @@
 
     <!-- font awesome script kit-->
     <script src="https://kit.fontawesome.com/64eda5d7b8.js" crossorigin="anonymous"></script>
-
+</div>
 </body>
 </html>
