added google fonts to body

--- a/tutorials.html
+++ b/tutorials.html
@@ -10,14 +10,23 @@
     <title>Meditation and Mindfulness</title>
 </head>
 <body>
-    <header>
-        <a href="index.html"><h1 id="logo">Meditate</h1></a>
-        <nav class="navigation-menu">
-            <a href="index.html">Home</a>
-            <a href="tutorials.html">Body and Mind</a>
-            <a href="check-in.html">Check-in</a>
-        </nav>
-    </header>
+    <div id=#background-image>
+        <header>
+            <a href="index.html"><h1 id="logo">Meditate</h1></a>
+            <nav class="navigation-menu">
+                <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>    
+                <li>
+                    <a href="tutorials.html">Body and Mind</a>
+                </li>    
+                <li>
+                    <a href="check-in.html">Check-in</a>
+                </li>    
+                </ul>
+            </nav>
+        </header>
 
     <section>
         <h2>Body</h2>
