--- a/check-in.html
+++ b/check-in.html
@@ -13,8 +13,8 @@
     <div id=#background-image>
         <header>
             <a href="index.html"><h1 id="logo">Meditate</h1></a>
-            <nav class="navigation-menu">
-                <ul>
+            <nav>
+                <ul id="navigation-menu">
                 <li>
                     <a href="index.html">Home</a>
                 </li>    
@@ -22,7 +22,7 @@
                     <a href="tutorials.html">Body and Mind</a>
                 </li>    
                 <li>
-                    <a href="check-in.html">Check-in</a>
+                    <a href="check-in.html" class="active">Check-in</a>
                 </li>    
                 </ul>
             </nav>
@@ -30,7 +30,7 @@
 
     <div>
     <h2 id="check-in-page">
-        This is a daily check-in for you to use as an online diary
+        Use this online diary as a daily check-in
     </h2>
 
     <form action="GET" method="#">
