--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 <body>
     <div id=#background-image>
     <header>
-        <a href="index.html"><h1 id="logo">Meditate</h1></a>
-        <nav class="navigation-menu">
-            <ul>
+        <a href="index.html">
+            <h1 id="logo">Meditate</h1>
+        </a>
+        <nav>
+            <ul id="navigation-menu">
             <li>
-                <a href="index.html">Home</a>
+                <a href="index.html" class="active">Home</a>
             </li>    
             <li>
                 <a href="tutorials.html">Body and Mind</a>
@@ -47,7 +49,7 @@
         <h2>
             Benefits
         </h2>
-        <ul class="text-right">
+        <ul>
             <li>Reduces stress</li>
             <li>Controls anxiety</li>
             <li>Enhances self-awareness</li>
