--- a/tutorials.html
+++ b/tutorials.html
@@ -13,13 +13,13 @@
     <div id=#background-image>
         <header>
             <a href="index.html"><h1 id="logo">Meditate</h1></a>
-            <nav class="navigation-menu">
-                <ul>
+            <nav>
+                <ul id="navigation-menu">
                 <li>
                     <a href="index.html">Home</a>
                 </li>    
                 <li>
-                    <a href="tutorials.html">Body and Mind</a>
+                    <a href="tutorials.html" class="active">Body and Mind</a>
                 </li>    
                 <li>
                     <a href="check-in.html">Check-in</a>
