added hero image and styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <title>Meditation and Mindfulness</title>
 </head>
 <body>
-    <div id=#background-image>
     <header>
         <a href="index.html">
             <h1 id="logo">Meditate</h1>
@@ -30,6 +29,7 @@
         </nav>
     </header>
     <section class="home-page">
+        <div id=#hero-image></div>
         <h2>
             Mission
         </h2>
@@ -79,6 +79,5 @@
 
     <!-- font awesome script kit-->
     <script src="https://kit.fontawesome.com/64eda5d7b8.js" crossorigin="anonymous"></script>
-</div>
 </body>
 </html>
