centered footer social media

--- a/check-in.html
+++ b/check-in.html
@@ -65,7 +65,7 @@
     </form>
     </div>
 
-    <footer id="social-media">
+    <footer class="social-media">
         <p>
             Find us on:
         </p>
