--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </section>
      
 
-    <footer id="social-media">
+    <footer class="social-media">
         <p>
             Find us on:
         </p>
