--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1 id="logo">Meditate</h1>
         </a>
         <nav>
-            <ul id="navigation-menu">
+            <ul class="navigation-menu">
             <li>
                 <a href="index.html" class="active">Home</a>
             </li>    
