--- a/tutorials.html
+++ b/tutorials.html
@@ -13,7 +13,7 @@
         <header>
             <a href="index.html"><h1 id="logo">Meditate</h1></a>
             <nav>
-                <ul id="navigation-menu">
+                <ul class="navigation-menu">
                 <li>
                     <a href="index.html">Home</a>
                 </li>    
