centered index.html paragraphs and increased padding

--- a/index.html
+++ b/index.html
@@ -28,24 +28,27 @@
             </ul>
         </nav>
     </header>
-    <section>
+        <section>
         <div id="hero-image"></div>
+        </section>
+        <section class="main-page">
         <h2>
             Mission
         </h2>
         <p>
-            Mindfulness can be as simple as focusing on the breath or paying attention to the food you are eating. Our goal is to teach easy ways of incorporating mindfulness and meditation into your everyday life.
-        </p>
+            Mindfulness can be as simple as focusing on the breath or paying attention to the food you are eating.</p>
+            <p>Our goal is to teach easy ways of incorporating mindfulness and meditation into your everyday life.</p>
     </section>
 
-    <section>
+    <section class="main-page">
         <h2>
             Background
         </h2>
-        <p>Meditation is the repeated process of focusing the mind and redirecting your thoughts. It can be used to increase your awareness of yourself and your surroundings. This is also a way to decrease stress , improve mood and improve concentration. </p>
+        <p>Meditation is the repeated process of focusing the mind and redirecting your thoughts.</p>
+        <p>It can be used to increase your awareness of yourself and your surroundings. This is also a way to decrease stress , improve mood and improve concentration.</p>
     </section>
     
-    <section>
+    <section id="benefits">
         <h2>
             Benefits
         </h2>
