--- a/index.html
+++ b/index.html
@@ -31,24 +31,29 @@
         <section>
         <div id="hero-image"></div>
         </section>
-        <section class="main-page">
+        <section>
+        <div id="float-left">
         <h2>
             Mission
         </h2>
         <p>
             Mindfulness can be as simple as focusing on the breath or paying attention to the food you are eating.</p>
             <p>Our goal is to teach easy ways of incorporating mindfulness and meditation into your everyday life.</p>
+        </div>         
     </section>
 
-    <section class="main-page">
+    <section>
+        <div id="float-right">
         <h2>
             Background
         </h2>
         <p>Meditation is the repeated process of focusing the mind and redirecting your thoughts.</p>
         <p>It can be used to increase your awareness of yourself and your surroundings. This is also a way to decrease stress , improve mood and improve concentration.</p>
+        </div>
     </section>
     
-    <section id="benefits">
+    <section>
+        <div id="float-center">
         <h2>
             Benefits
         </h2>
@@ -60,8 +65,9 @@
             <li>Improves sleep</li>
             <li>Can decrease blood pressure</li>
         </ul>
+        </div>
+        <div id="bottom-image"></div>
     </section>
-     
 
     <footer class="social-media">
         <p>
