--- a/check-in.html
+++ b/check-in.html
@@ -31,7 +31,7 @@
         Use this online diary as a daily check-in
     </h3>
 
-    <form action="GET" method="#">
+    <form action="GET" method="#" id="form-background">
         <label for="fname">First Name:</label>
         <input type="text" id="fname" name="fname" class="form-input" required>
 
