--- a/index.html
+++ b/index.html
@@ -11,20 +11,19 @@
 </head>
 <body>
     <header>
-        <a href="index.html">
-            <h1 id="logo">Meditate</h1>
-        </a>
+        <a href="index.html"><h1 id="logo">Meditate</h1></a>
         <nav>
             <ul class="navigation-menu">
-            <li>
-                <a href="index.html" class="active">Home</a>
-            </li>    
-            <li>
-                <a href="tutorials.html">Body and Mind</a>
-            </li>    
+
             <li>
                 <a href="check-in.html">Check-in</a>
-            </li>    
+            </li> 
+            <li>
+                <a href="tutorials.html">Body and Mind</a>
+            </li>  
+            <li>
+                <a href="index.html" class="active">Home</a>
+            </li>   
             </ul>
         </nav>
     </header>
