footer icons restyled to increase footer height and marging + padding

--- a/check-in.html
+++ b/check-in.html
@@ -66,11 +66,8 @@
     </form>
     </div>
 
-    <footer class="social-media">
-        <p>
-            Find us on:
-        </p>
-        <ul>
+    <footer>
+        <ul class="social-media">
             <li>
                 <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook-square"></i></a>
             </li>
