--- a/tutorials.html
+++ b/tutorials.html
@@ -99,11 +99,8 @@
     </section>
 </body>
 
-<footer class="social-media">
-    <p>
-        Find us on:
-    </p>
-    <ul>
+<footer>
+    <ul  class="social-media">
         <li>
             <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook-square"></i></a>
         </li>
