adding media query selectors

--- a/tutorials.html
+++ b/tutorials.html
@@ -32,7 +32,7 @@
         <h3>Body</h3>
         <hr>
         <div class="float-left">
-        <video src="https://www.youtube.com/watch?v=-yZrJh5YrdE" title="A guided video on how to position yourself for meditation" controls autoplay muted loop><p>Your browser doesn't support HTML5 video.</p><a href="https://www.youtube.com/watch?v=-yZrJh5YrdE"><p>Link to the video</p></a></video>
+        <iframe src="https://www.youtube.com/watch?v=-yZrJh5YrdE" title="A guided video on how to position yourself for meditation" controls autoplay muted loop><p>Your browser doesn't support HTML5 video.</p><a href="https://www.youtube.com/watch?v=-yZrJh5YrdE"><p>Link to the video</p></a></iframe>
         </div>
 
         <div class="float-right">
@@ -65,7 +65,7 @@
         <h3>Mind</h3>
         <hr>
             <div class="float-left">
-                <video src="https://www.youtube.com/watch?v=SEfs5TJZ6Nk" title="A 3-minute guided video on breathing techniques" controls autoplay muted loop><p>Your browser doesn't support HTML5 video</p><a href="https://www.youtube.com/watch?v=SEfs5TJZ6Nk"><p>Link to the video</p></a></video>
+                <iframe src="https://www.youtube.com/watch?v=SEfs5TJZ6Nk" title="A 3-minute guided video on breathing techniques" controls autoplay muted loop><p>Your browser doesn't support HTML5 video</p><a href="https://www.youtube.com/watch?v=SEfs5TJZ6Nk"><p>Link to the video</p></a></iframe>
             </div>    
 
         <div class="float-right">
