--- a/tutorials.html
+++ b/tutorials.html
@@ -31,11 +31,11 @@
     <section class="tutorial-text">
         <h3>Body</h3>
         <hr>
-        <div class="float-left">
+        <div class="tutorial-float-left">
         <iframe src="https://www.youtube.com/watch?v=-yZrJh5YrdE" title="A guided video on how to position yourself for meditation" controls autoplay muted loop><p>Your browser doesn't support HTML5 video.</p><a href="https://www.youtube.com/watch?v=-yZrJh5YrdE"><p>Link to the video</p></a></iframe>
         </div>
 
-        <div class="float-right">
+        <div class="tutorial-float-right">
         <h4>Upward-Facing Dog/Urdhva Mukha Svanasana</h4>
         <p>
             From Low Plank/Chaturanga, drop your hips down to the floor and flip your toes over so the tops of your feet touch the floor.
@@ -44,7 +44,7 @@
         </p>
         </div>
 
-        <div class="float-center">
+        <div class="tutorial-float-center">
         <h4>
             Tree/Vrksasana
         </h4>
@@ -64,11 +64,11 @@
         <div>
         <h3>Mind</h3>
         <hr>
-            <div class="float-left">
+            <div class="tutorial-float-left">
                 <iframe src="https://www.youtube.com/watch?v=SEfs5TJZ6Nk" title="A 3-minute guided video on breathing techniques" controls autoplay muted loop><p>Your browser doesn't support HTML5 video</p><a href="https://www.youtube.com/watch?v=SEfs5TJZ6Nk"><p>Link to the video</p></a></iframe>
             </div>    
 
-        <div class="float-right">
+        <div class="tutorial-float-right">
         <h4>
             Diaphragmatic breathing
         </h4>
@@ -84,7 +84,7 @@
         </p>
         </div>
 
-        <div class="float-center">
+        <div class="tutorial-float-center">
         <h4>Deep breathing</h4>
         <p>Deep breathing helps to relieve shortness of breath by preventing air from getting trapped in your lungs and helping you to breathe in more fresh air. It may help you to feel more relaxed and centered.
             
