styling submit and reset buttons

--- a/check-in.html
+++ b/check-in.html
@@ -61,7 +61,7 @@
         <input type="radio" id="5" name="score">
         
 
-        <label for="feelgood" class="feelgood">What did you to feel good?</label>
+        <label for="feelgood" class="feelgood">What made you feel good?</label>
         <textarea type="text" id="feelgood" name="feelgood" class="form-input" required></textarea>
 
         <input class="submit-button" type="submit" value="Add to diary">
