applied hero image to all three pages

--- a/check-in.html
+++ b/check-in.html
@@ -27,7 +27,9 @@
             </ul>
         </nav>
     </header>
+
 <section>
+    <div class="hero-image"></div>    
     <h3>
         This form can be used as a daily check-in. Responses are private and will not be saved.
     </h3>
