--- a/tutorials.html
+++ b/tutorials.html
@@ -27,6 +27,7 @@
         </nav>
     </header>
 
+    <div class="hero-image"></div>
     <section class="tutorial-text">
         <h3>Body</h3>
         <h5>This section will teach 3 separate techniques for Body Meditation, the first is a video tutorial, followed by two written tutorials.</h5>
