--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </nav>
     </header>
         <section id="main-page-response">
-        <div id="hero-image"></div>
+        <div class="hero-image"></div>
 
         <div>IMAGE</div>
         
