edit submit and clear inputs

--- a/check-in.html
+++ b/check-in.html
@@ -66,8 +66,8 @@
         <label for="feelgood" class="feelgood">What made you feel good?</label>
         <textarea type="text" id="feelgood" name="feelgood" class="form-input" required></textarea>
 
-        <input class="submit-button" type="submit" value="Add to diary">
-        <input class="submit-button" type="reset" value="Clear form">
+        <input class="diary-submit-button" type="submit" value="Add to diary">
+        <input class="clear-submit-button" type="reset" value="Clear form">
     </form>
     </div>
 </section>    
