--- a/check-in.html
+++ b/check-in.html
@@ -39,10 +39,10 @@
 
     <form action="#" method="GET" id="form-background">
         <label for="fname">First Name:</label>
-        <input type="text" id="fname" name="fname" value="fname" required>
+        <input type="text" id="fname" name="fname" required>
 
         <label for="lname">Last Name:</label>
-        <input type="text" id="lname" name="lname" value="lname" required>
+        <input type="text" id="lname" name="lname" required>
 
         <p>Rate Your Day:</p>
 
