editing h3 on index.html

--- a/check-in.html
+++ b/check-in.html
@@ -30,7 +30,7 @@
 
 <section>
     <div class="hero-image"></div>    
-    <h3>
+    <h3 id="check-in-header-text">
         This form can be used as a daily check-in. Responses are private and will not be saved.
     </h3>
 </section>        
