resized nav menu to be bigger on smaller screens

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p>It can be used to increase your awareness of yourself and your surroundings. This is also a way to decrease stress , improve mood and improve concentration.</p>
         </div>
     
-        <div class="float-center background-box">
+        <div class="float-center benefits background-box">
         <h2>
             Benefits
         </h2>
